<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_language_header">

        <ListPreference
            app:defaultValue="en"
            app:entries="@array/lang_entries"
            app:entryValues="@array/lang_values"
            app:key="language"
            app:title="@string/settings_language_selection_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_theme_header">

        <SwitchPreferenceCompat
            android:summaryOff="@string/settings_dark_theme_off_description"
            android:summaryOn="@string/settings_dark_theme_on_description"
            app:defaultValue="false"
            app:key="dark_theme"
            app:title="@string/settings_dark_theme_title" />
    </PreferenceCategory>

</PreferenceScreen>