<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btm_nav"
    app:startDestination="@id/newsFragment">

    <fragment
        android:id="@+id/newsFragment"
        android:name="com.flatstack.qatesttask.feature.news.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news" >
        <action
            android:id="@+id/action_newsFragment_to_browserFragment"
            app:destination="@id/browserFragment" />
    </fragment>
    <fragment
        android:id="@+id/categoryFragment"
        android:name="com.flatstack.qatesttask.CategoryFragment"
        android:label="@string/categories"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.flatstack.qatesttask.feature.settings.SettingsFragment"
        android:label="@string/settings" />
    <fragment
        android:id="@+id/browserFragment"
        android:name="com.flatstack.qatesttask.feature.browser.BrowserFragment"
        android:label="BrowserFragment" >
        <argument
            android:name="url"
            app:argType="string" />
    </fragment>
</navigation>